# durctoo

./: README.md  examples.py  examples_json_maker.py  pyproject.toml
example_output/: README.md
src/durctoo/: __init__.py  form_data.py  forms.py
src/durctoo/json_schemas/: README.md  html5_form.schema.json  validate_schema.py
src/durctoo/templates/: __init__.py  abstract.py  bootstrap5.py  bulma.py  materialize.py
tests/: test_bulma_template.py  test_form_json_loading.py  test_forms.py
