[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "durctoo"
version = "0.1.0"
description = "A Python package for HTML5 form data modeling and manipulation"
readme = "README.md"
requires-python = ">=3.8"
license = "AGPL"
authors = [
    { name = "Durctoo Contributors" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
]
keywords = ["html5", "forms", "web", "data-modeling"]
dependencies = []

[project.urls]
Homepage = "https://github.com/careset/durctoo"
Repository = "https://github.com/careset/durctoo.git"
Issues = "https://github.com/careset/durctoo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/durctoo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
